# flight

./: .coveragerc  .gitignore  Cargo.toml  README.md  README.pt-BR.md  TECHNICAL.md  VISION.md  pyproject.toml
.github/actions/flight/: action.yml
.github/workflows/: ci.yml  flight-example.yml  release.yml
benchmarks/: README.md  fault_injection.py  web_overhead.py
crates/flight-core/: Cargo.toml
crates/flight-core/src/: dump.rs  lib.rs  recorder.rs  ring.rs
crates/flight-format/: Cargo.toml
crates/flight-format/src/: block.rs  crash.rs  error.rs  event.rs  header.rs  lib.rs  mutation.rs  nondet.rs  writer.rs
crates/flight-format/tests/: blocks_ext.rs  codec_ext.rs  constants_ext.rs  enums_ext.rs  writer_ext.rs
crates/flight-reader/: Cargo.toml
crates/flight-reader/src/: lib.rs
crates/flight-reader/tests/: reader_ext.rs  roundtrip.rs  truncation_ext.rs
crates/flight-wasm/: Cargo.toml
crates/flight-wasm/src/: lib.rs
docs/: FORMAT.md
examples/: crash.py  replay.py  timetravel.py
python/flight/: __init__.py  _adapters.py  _agent.py  _asyncio.py  _bisect.py  _capture.py  _ci.py  _cli.py  _config.py  _correlation.py  _crypto.py  _daemon.py  _dap.py  _ddmin.py  _diff.py  _explain.py  _fingerprint.py  _fleet.py  _generalize.py  _governor.py  _install.py  _io.py  _nondet.py  _pytest.py  _read.py  _record.py  _repro.py  _scrub.py  _serialize.py  _slice.py  _threads.py  _timetravel.py  _viewer.html  _viewer.py  _viewer_model.py  _web.py  _whatif.py
recorders/go/: go.mod
recorders/go/cmd/demo/: main.go
recorders/go/flight/: codec.go  flight.go
recorders/node/: demo.mjs  flight.mjs
scripts/: bench.py  build-wasm.sh  coverage.sh
tests/: conftest.py  test_agent.py  test_bisect.py  test_capture.py  test_capture_read_cli_ext.py  test_cov_final.py  test_cov_install_cli.py  test_cov_misc.py  test_cov_production.py  test_cov_replay_engine.py  test_diff_ddmin.py  test_diff_html.py  test_diff_intelligence_ext.py  test_ecosystem.py  test_ecosystem_whatif_ext.py  test_fault_injection.py  test_fleet.py  test_foundation_ext.py  test_generalize.py  test_intelligence.py  test_io_replay.py  test_nondet.py  test_nondet_io_concurrency_ext.py  test_polyglot.py  test_production.py  test_production_ext.py  test_read_and_cli.py  test_record.py  test_record_timetravel_dap_ext.py  test_recording.py  test_repro.py  test_robustness.py  test_serialize.py  test_slice.py  test_timetravel.py  test_viewer_app.py  test_viewer_model.py  test_whatif.py  test_whatif_server.py
viewer-wasm/: index.html  template.html
