[workspace]
resolver = "2"
members = [
    "crates/flight-format",
    "crates/flight-reader",
    "crates/flight-core",
]

[workspace.package]
version = "0.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/Tech-GabrielLima/flight"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
rmp-serde = "1.3"
zstd = "0.13"

[profile.release]
lto = "thin"
codegen-units = 1
