[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pyflight"
version = "0.0.5"
description = "Your traceback says where Python died; flight says why — a post-mortem black box you open, query (why is this value what it is?), and re-run."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Gabriel Lima" }]
keywords = ["debugging", "post-mortem", "traceback", "recorder", "sys.monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Debuggers",
]

[project.urls]
Homepage = "https://github.com/Tech-GabrielLima/flight"

[project.scripts]
flight = "flight._cli:main"

[project.entry-points.pytest11]
flight = "flight._pytest"

[project.optional-dependencies]
viewer = ["textual>=0.60"]
crypto = ["cryptography>=41"]
dev = ["pytest>=7", "textual>=0.60", "cryptography>=41", "coverage>=7"]

[tool.maturin]
manifest-path = "crates/flight-core/Cargo.toml"
python-source = "python"
module-name = "flight._core"
# abi3-py312: build against CPython's stable ABI so a single wheel per platform
# works on 3.12, 3.13, 3.14+ — no per-minor-version rebuild, smaller wheel matrix.
features = ["pyo3/extension-module", "pyo3/abi3-py312"]
# ship the browser viewer inside the wheel so `flight view --serve` can serve it
include = ["python/flight/_viewer.html"]
