[package]
name = "flight-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Flight's hot path: lock-free ring buffer, sys.monitoring callbacks and the .flight writer, exposed to Python as flight._core."

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
flight-format = { path = "../flight-format" }
flight-reader = { path = "../flight-reader" }
pyo3 = { version = "0.29", features = ["abi3-py312"] }
