[package]
name = "flight-format"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The .flight file format: block layout, event records and (de)serialization primitives."

[dependencies]
serde = { workspace = true }
rmp-serde = { workspace = true }
zstd = { workspace = true }
